--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -83,6 +83,7 @@ body {
 
 .fit-image{
     width: 100%;
+    height:100%;
     box-sizing: border-box;
     
 }
@@ -671,4 +672,15 @@ iframe.game-iframe{
 
 .tab-doc-button.md-focused{
     background-color: rgba(255,255,255, 0.3) !important;
+}
+
+.archive-head{
+    font-size: 1em;
+    padding: 0.1rem 1rem;
+}
+
+.archive-subhead{
+    font-size: .75em;
+    color:#ddd;
+    padding:0.1rem 1rem;
 }
