Added more team members on the website

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -81,6 +81,12 @@ body {
     align-self: flex-end;
 }
 
+.fit-team{
+    width: 100%;
+    height:100%;
+    box-sizing: border-box;
+}
+
 .fit-image{
     width: 100%;
     height:100%;
@@ -145,6 +151,17 @@ body {
     @media screen and (max-width: 1149px){
         width:50vw;   
     }
+}
+
+.profile-button-team{
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    top: 0px;
+    left: 0px;
+    box-shadow: 0px 0px 10px #888;
 }
 .blog-card.layout-row{
     @media screen and (min-width: 200px){
@@ -287,6 +304,33 @@ body {
 
 .jswanick_color{
     background: linear-gradient(135deg, #6900ff 0%, #99ccff 100%);
+}
+
+.eli_color{
+    background: linear-gradient(135deg, #00000f 0%, #aaa 100%);
+}
+
+.nadrian_color{
+    background: linear-gradient(135deg, #BADA55 0%, rgb(1, 225, 255) 100%);
+}
+
+.kfitz_color{
+    background: linear-gradient(135deg, rgb(179, 255, 0) 0%, rgb(1, 103, 255) 100%);    
+}
+.dshalala_color{
+    background: linear-gradient(135deg, #66023c 0%, rgb(196, 20, 20) 100%);        
+}
+
+.zolyarnik_color{
+    background: linear-gradient(135deg, #bd2e2e 0%, rgb(218, 142, 42) 100%);        
+}
+
+.aedgarian_color{
+    background: linear-gradient(135deg, #fffffe 0%, rgb(134, 60, 0) 100%);            
+}
+
+.tpham_color{
+    background: linear-gradient(135deg, #00b3b3 0%, rgba(67, 201, 34, 0.801) 100%);            
 }
 
 /*******************/
