--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -339,6 +339,9 @@ body {
 .mnap_color{
     background: linear-gradient(135deg, #6FECE8, #7062C0 100%);        
 }
+.udwi_color{
+    background: linear-gradient(135deg, #6666ff, #67bbf3 100%);            
+}
 
 md-backdrop{
     position:fixed;
