--- a/app/templates/app/blog/post.hbs
+++ b/app/templates/app/blog/post.hbs
@@ -6,6 +6,12 @@
     {{#paper-button raised=true mini=true primary=true href=(href-to "app.blog.archive")}}{{paper-icon "keyboard backspace"}}{{/paper-button}}
     <h1>{{post.title}}</h1>
     <h4>Written By {{post.author.displayName}} | {{date post.published}}</h4>
+    {{#if (gt post.labels.length 0)}}
+        {{paper-divider}}
+        <div class="flex archive-subtitle"> Tags </div>
+        {{tag-list labels=post.labels chosenTag=chosenTag}} {{/if}}
+        {{paper-divider}}
+        
     {{!-- <div class="flex-80">{{t}}</div> --}}
     {{htmlString post.content}}
 {{/paper-grid-list}}
