changed build links

--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -8,13 +8,13 @@
             {{#paper-button raised=true class="play-button" href=(href-to "app.web")}}Launch Web Build{{/paper-button}}
         </div>
         <div class="landing-button flex">
-            <a href="https://drive.google.com/open?id=19Oz8Y_G1hx4nfliTjgcpiD513TXwt4a2">            
+            <a href="https://drive.google.com/file/d/1Mw1q_W5hXfn5W8MAyeSD3Gd3LeDzCL6z/view?usp=sharing">            
                 {{#paper-button raised=true class="play-button"}}Download PC Build{{/paper-button}}
             </a>
         </div>
     
         <div class="landing-button flex">
-            <a href="https://drive.google.com/open?id=1-s9HDl7EYJjR7unbKUVHyqtMkSRmLX_p">
+            <a href="https://drive.google.com/file/d/1-kKXnJQrR-J1Rx_auYPWga-N4YQAU3vW/view?usp=sharing">
                 {{#paper-button raised=true class="play-button"}}Download Mac Build{{/paper-button}}
             </a>
         </div>
