added scrums to website

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -848,3 +848,10 @@ iframe.game-iframe{
   .img-lazy--loaded {
     animation: 100ms fade-in forwards;
   }
+
+
+  .mid-nav-section{
+      text-align: center;
+      font-weight: bold;
+      background-color: rgb(192, 105, 100);
+  }
