--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -8,13 +8,13 @@
             {{#paper-button raised=true class="play-button" href=(href-to "app.web")}}Launch Web Build{{/paper-button}}
         </div>
         <div class="landing-button flex">
-            <a href="https://drive.google.com/open?id=11imY-mSPFavzxyNvlASxhzT57m1UHLhq">            
+            <a href="https://drive.google.com/file/d/11imY-mSPFavzxyNvlASxhzT57m1UHLhq/view">            
                 {{#paper-button raised=true class="play-button"}}Download PC Build{{/paper-button}}
             </a>
         </div>
     
         <div class="landing-button flex">
-            <a href="https://drive.google.com/open?id=1tjPB5IZRVkcANLr2UQFmma3jhfj1oe7O">
+            <a href="https://drive.google.com/file/d/1tjPB5IZRVkcANLr2UQFmma3jhfj1oe7O/view">
                 {{#paper-button raised=true class="play-button"}}Download Mac Build{{/paper-button}}
             </a>
         </div>
