--- a/app/templates/app/play.hbs
+++ b/app/templates/app/play.hbs
@@ -8,7 +8,7 @@
             {{#paper-button raised=true class="play-button" href=(href-to "app.web")}}Launch Web Build{{/paper-button}}
         </div>
         <div class="landing-button flex">
-            <a href="https://drive.google.com/file/d/1u926ZbykUuqIkKJedmpu3f7uQHqryUZ2/view">            
+            <a href="https://drive.google.com/open?id=1Ng1dPvZ4ibYQXUZBZxz4hs2QJMv1XG4V">            
                 {{#paper-button raised=true class="play-button"}}Download PC Build{{/paper-button}}
             </a>
         </div>
